adjustments to javascript and jQuery script positioning at index.html

--- a/style.css
+++ b/style.css
@@ -1301,8 +1301,11 @@ header .light-logo {
     
 }
 
-@media only screen and (min-device-width : 414px) and (max-device-width : 667px) {
-    .footer {height:160vh;}
+@media only screen and (min-device-width : 414px) and (max-device-width : 767px) {
+    .footer {
+        height:160vh;
+
+    }
 
     .work-with-us {
         height:38vh;
