--- a/css/style.css
+++ b/css/style.css
@@ -679,6 +679,7 @@ header .light-logo {
 /* Get A Quote Section */
 
 .work-with-us {
+    
     background: -moz-linear-gradient(45deg, rgba(0, 0, 0, 1) 0%, rgba(0, 140, 140, 1) 90%, rgba(0, 156, 156, 1) 100%);
     background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(0, 0, 0, 1)), color-stop(90%, rgba(0, 140, 140, 1)), color-stop(100%, rgba(0, 156, 156, 1)));
     /* safari4+,chrome */
@@ -690,6 +691,7 @@ header .light-logo {
 }
 
 .work-text {
+    align-items:  center;
     font-size: 22px;
     color: #fff;
     font-weight: 400;
@@ -698,14 +700,15 @@ header .light-logo {
 }
 
 .btn_large.quote_btn {
+    
     color: #fff;
     border: 2px solid #fff;
-    padding: 10px 45px;
+    padding: 10px 25px;
     text-transform: uppercase;
     font-family: 'Roboto', 'sans-serif';
     font-size: 22px;
     text-align: center;
-    margin-left: 40%;
+    margin-left:150px;
     margin-top: 35px;
 }
 
@@ -749,6 +752,7 @@ header .light-logo {
     position: relative;
     background-color: #f7f7f7;
     padding-top:20px;
+    padding-bottom:60px;
     
 }
 
@@ -806,7 +810,7 @@ header .light-logo {
 
 .portfolio-btn {
     text-align: center;
-    margin: 50px 0px;
+
 }
 
 .portfolio-btn #btn_2 {
@@ -1323,20 +1327,33 @@ header .light-logo {
         background: contain;
     }
 
-    .portfolio-items-section {
-        position:relative;
-        left:40px;
-    }
+    
 
     .image{
         position:relative;
-        left:20px;
+        left:10px;
     }
 
 
 
     .portfolio-website {
         font-size:14px;
+    }
+
+    .btn_large.quote_btn {
+        border: 2px solid #fff;
+        padding: 8px 15px;
+        font-size: 18px;
+        margin-top: 45px;
+        margin-left:50px;
+    }
+    .work-btn {
+        text-align: center;
+
+    }
+
+    #our_skills .header_section {
+        height:40vh;
     }
 }
 
