Homepage Responsiveness Test Tablet

--- a/css/style.css
+++ b/css/style.css
@@ -1374,6 +1374,15 @@ header .light-logo {
         margin:0;
     }
 
+    .btn_large.quote_btn {
+    
+    
+    
+    text-align: center;
+    
+    margin-top: 10px;
+}
+
 }
 
 
